--- a/pashua.cabal
+++ b/pashua.cabal
@@ -16,6 +16,7 @@ extra-source-files:  README.md
 executable pashua
   hs-source-dirs:      src
   main-is:             Main.hs
+  other-modules: Pashua
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , turtle
