--- a/pashua.cabal
+++ b/pashua.cabal
@@ -23,3 +23,4 @@ executable pashua
                      , text
                      , containers
                      , formatting
+                     , process
