--- a/pashua.cabal
+++ b/pashua.cabal
@@ -13,14 +13,21 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
+library
+  hs-source-dirs: src
+  exposed-modules: Graphics.UI.Pashua
+  default-language: Haskell2010 
+  build-depends: base >= 4.7 && < 5
+               , text
+               , formatting
+               , process
+                             
 executable pashua
-  hs-source-dirs:      src
+  hs-source-dirs:      app
   main-is:             Main.hs
-  other-modules: Pashua
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                     , turtle
                      , text
-                     , containers
                      , formatting
                      , process
+                     , pashua
