--- a/pashua.cabal
+++ b/pashua.cabal
@@ -15,7 +15,7 @@ extra-source-files:  README.md
 
 library
   hs-source-dirs: src
-  exposed-modules: Graphics.UI.Pashua
+  exposed-modules: Graphics.UI.Pashua, Graphics.UI.Pashua.Parser
   default-language: Haskell2010 
   build-depends: base >= 4.7 && < 5
                , text
